# sample-c-cpp-project

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
